# funtech_test

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  full_compose.env  not_compose.env  pyproject.toml
alembic/: env.py
alembic/versions/: 3616e164d07c_.py  ae88b9297bfd_.py
app/: api_main.py
app/api/: order_api.py  user_api.py
app/core/: access.py  db_connector.py  settings.py
app/interfaces/: observer.py
app/models/: __init__.py  base.py  base_repository.py  order_model.py  user_model.py
app/raises/: raize_user_services.py
app/repo/: order_repo.py  user_repo.py
app/schemas/: auth_schemas.py  base_schema.py  google_api_schemas.py  kafta_models.py  order_schemas.py  user_schemas.py
app/services/: base_services.py  order_service.py  user_auth_services.py
app/utils/: auth_utils.py  cache_builders.py  encoders.py
app/workers/: celery.py  consumer_faststream.py  tasks.py
