[project]
name = "funtech-test"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.3",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "celery>=5.6.2",
    "fastapi>=0.128.1",
    "faststream[kafka]>=0.6.6",
    "passlib>=1.7.4",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "setuptools>=80.10.2",
    "uvicorn>=0.40.0",
    "pyjwt>=2.11.0",
    "fastapi-cache2>=0.2.2",
    "redis>=7.1.0",
    "aiohttp>=3.13.3",
    "google-oauth2-tool>=0.0.3",
]
